--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
-    "sha256": "^0.2.0"
+    "sha256": "^0.2.0",
+    "uuid": "^3.3.2"
   }
 }
